Mon Aug 30 12:18:40 1999  Jeffrey A Law  (law@cygnus.com)

	* gas/hppa/reloc/*.s: Use .code instead of .SPACE/.SUBSPA for
	sectioning.
	* gas/hppa/parse/parse.exp: Disable tests not appropriate for PA64.
	Revamp address expressions slightly to handle an arbitrary sized
	address.

	* gas/hppa/parse/*.s: Use .code instead of .SPACE/.SUBSPA for
	sectioning.
	* gas/hppa/parse/parse.exp: Disable tests not appropriate for PA64.

	* gas/hppa/basic/*.s: Use .code instead of .SPACE/.SUBSPA for
	sectioning.

1999-08-30  Alan Modra  <alan@spri.levels.unisa.edu.au>

	* gas/i386/naked.s, gas/i386/naked.d: Test-suite addition for
	allow_naked_reg parsing.
	* gas/i386/i386.exp: Call it.

1999-08-29  Alan Modra  <alan@spri.levels.unisa.edu.au>

	* gas/i386/white.s, gas/i386/white.l: Add space in FP reg tests.

Sat Aug 28 00:16:12 1999  Jerry Quinn <jquinn@nortelnetworks.com>

	* gas/hppa/basic/basic.exp:  Add new tests shift2.s,
	shift3.s, extract2.s, extract3.s, deposit2.s, and deposit3.s.
	* gas/hppa/basic/shift2.s, shift3.s, extract2.s,
	extract3.s, deposit2.s, deposit3.s:  New.

	* gas/hppa/basic/add.s,addi.s,dcor.s,shladd.s,sub.s,subi.s,unit.s:
	Add new syntax versions of instructions to tests. 
	* gas/hppa/basic/add2.s,dcor2.s,perf.s,purge2.s,shladd2.s,sub2.s,
	system2.s, unit2.s:  New tests.
	* hppa/basic/basic.exp: Add new tests.

	* gas/hppa/basic/basic.exp:
	* gas/hppa/basic/media.s:  Add test cases for new instructions.

	* gas/hppa/basic/basic.exp (do_branch2,do_media): New.
	* gas/hppa/basic/branch2.s:  New.
	* gas/hppa/basic/media.s:  New.

	* gas/hppa/basic/basic.exp (do_fp_comp2):  New.
	* gas/hppa/basic/fp_comp2.s:  New.

1999-08-20  Alan Modra  <alan@spri.levels.unisa.edu.au>

	* gas/i386/general.s, gas/i386/general.l: Add .code16gcc
	displacement checks with auto address prefix.

1999-08-17  H.J. Lu  <hjl@gnu.org>

	* gas/elf/elf.exp: Expected to fail on alpha*-*-*.

1999-08-09  Ian Lance Taylor  <ian@zembu.com>
