@@ -24,28 +24,21 @@ proc do_subspace_align_test {} {
     set testname "ss_align.s: Test subspace alignment (part 2)"
     set x 0
 
+    if { [istarget hppa*-*-*elf*] || [istarget hppa*w-*-*] } then {
+      return 
+    }
+
     if [gas_test_old "ss_align.s" "" "subspace alignment (part 1)"] then {
 	objdump_start_no_subdir "a.out" "-h"
 
     # Check the headers for the correct alignment value for the
-    # .data section (elf) or the $DATA$ subspace (som).
-	if [istarget hppa*-*-*elf*] then {
-	    while 1 {
-		expect {
-		    -re "data\[^\n\]* 2..6\[^\n\]*\n"	{ set x 1 }
-		    -re "\[^\n\]*\n"				{ }
-		    timeout			{ perror "timeout\n"; break }
-		    eof				{ break }
-		}
-	    }
-	} else {
-	    while 1 {
-		expect  {
-		    -re "DATA\[^\n\]* 2..6\[^\n\]*\n"	{ set x 1 }
-		    -re "\[^\n\]*\n"				{ }
-		    timeout			{ perror "timeout\n"; break }
-		    eof				{ break }
-		}
+    # the $DATA$ subspace (som).
+	while 1 {
+	    expect  {
+		-re "DATA\[^\n\]* 2..6\[^\n\]*\n"	{ set x 1 }
+		-re "\[^\n\]*\n"				{ }
+		timeout			{ perror "timeout\n"; break }
+		eof				{ break }
 	    }
 	}
 
@@ -114,6 +107,10 @@ proc do_align3_test {} {
     set testname "align3.s: Test for alignment bug when switching subspaces (part2)"
     set x 0
 
+    if { [istarget hppa*-*-*elf*] || [istarget hppa*w-*-*] } then {
+      return 
+    }
+
     if [gas_test_old "align3.s" "" "Test for alignment bug when switching subspaces (part1)"] {
 	objdump_start_no_subdir "a.out" "--prefix-addresses -d"
 
@@ -141,7 +138,7 @@ proc do_align4_test {} {
     set testname "align4.s: More subspace alignment tests (part2)"
     set x 0
 
-    if [istarget hppa*-*-*elf*] then {
+    if { [istarget hppa*-*-*elf*] || [istarget hppa*w-*-*] } then {
 	return
     }
 
