@@ -1,5 +1,10 @@
 Mon Aug 30 12:18:40 1999  Jeffrey A Law  (law@cygnus.com)
 
+	* gas/hppa/unsorted/*.s: Use .code instead of .SPACE/.SUBSPA for
+	sectioning.
+	* gas/hppa/unsorted/unsorted.exp: Disable tests not appropriate for
+	PA64.
+
 	* gas/hppa/reloc/*.s: Use .code instead of .SPACE/.SUBSPA for
 	sectioning.
 	* gas/hppa/parse/parse.exp: Disable tests not appropriate for PA64.
